--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,14 +17,21 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_hooks: ^0.20.0
   flutter_web_plugins:
     sdk: flutter
+  hooks_riverpod: ^2.3.7
+  riverpod_annotation: ^2.1.1
 
 dev_dependencies:
+  build_runner: ^2.4.6
+  custom_lint: ^0.4.0
   flutter_flavorizr: ^2.2.1
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  riverpod_generator: ^2.2.4
+  riverpod_lint: ^1.4.0
 
 flutter:
   uses-material-design: true
