fix: analysis_options

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,7 @@ analyzer:
     strict-raw-types: true
   errors:
     invalid_annotation_target: ignore
+    duplicate_ignore: ignore
 
 linter:
   rules:
