--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,25 +11,30 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  dynamic_color: ^1.6.6
+  envied: ^0.3.0+3
   firebase_core: ^2.15.0
   firebase_crashlytics: ^3.3.4
   firebase_performance: ^0.9.2+4
   flutter:
     sdk: flutter
-
   flutter_hooks: ^0.20.0
   flutter_web_plugins:
     sdk: flutter
+  go_router: ^10.0.0
   hooks_riverpod: ^2.3.7
   riverpod_annotation: ^2.1.1
+  supabase_flutter: ^1.10.10
 
 dev_dependencies:
   build_runner: ^2.4.6
   custom_lint: ^0.4.0
+  envied_generator: ^0.3.0+3
   flutter_flavorizr: ^2.2.1
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  go_router_builder: ^2.2.4
   pedantic_mono: ^1.23.0
   riverpod_generator: ^2.2.4
   riverpod_lint: ^1.4.0
