--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   dynamic_color: ^1.6.6
+  email_validator: ^2.1.17
   envied: ^0.3.0+3
   firebase_core: ^2.15.0
   firebase_crashlytics: ^3.3.4
