--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <!-- Accepts URIs that begin with YOUR_SCHEME://YOUR_HOST -->
                 <data
-                    android:scheme="net.ysf_frappuccino.frappuccino"
+                    android:scheme="net.yumnumm.frappuccino"
                     android:host="login-callback" />
             </intent-filter>
         </activity>
