--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,10 @@ dependencies:
   flutter_hooks: ^0.20.0
   flutter_web_plugins:
     sdk: flutter
+  freezed_annotation: ^2.4.1
   go_router: ^10.0.0
   hooks_riverpod: ^2.3.7
+  json_annotation: ^4.8.1
   riverpod_annotation: ^2.1.1
   supabase_flutter: ^1.10.10
 
@@ -35,7 +37,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.4.1
   go_router_builder: ^2.2.4
+  json_serializable: ^6.7.1
   pedantic_mono: ^1.23.0
   riverpod_generator: ^2.2.4
   riverpod_lint: ^1.4.0
