--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   go_router: ^10.0.0
   hooks_riverpod: ^2.3.7
   json_annotation: ^4.8.1
+  qr_flutter: ^4.1.0
   riverpod_annotation: ^2.1.1
   supabase_flutter: ^1.10.10
 
