--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,11 @@ dependencies:
     sdk: flutter
   freezed_annotation: ^2.4.1
   go_router: ^10.0.0
+  google_fonts: ^5.1.0
   hooks_riverpod: ^2.3.7
+  intl: ^0.18.1
   json_annotation: ^4.8.1
+  mobile_scanner: ^3.3.0
   qr_flutter: ^4.1.0
   riverpod_annotation: ^2.1.1
   supabase_flutter: ^1.10.10
